# Heat_Exchanger_Calc

./: .gitignore  .pre-commit-config.yaml  HeatExchangerCalcDesktop.spec  HeatExchangerCalcWeb.spec  README.md  RELEASE_NOTES.md  __init__.py  app_desktop.py  app_icon.icns  app_web.py  build_macos.sh  build_windows.ps1  config.py  correlations.py  engineering_utils.py  example_run.py  exceptions.py  fluids_db.py  heat_exchanger.py  heat_exchanger_save.json  helpers.py  i18n.py  logging_config.py  model_types.py  plot_theme.py  pyproject.toml  reporting.py  requirements.txt  run_desktop.py  run_web.py  test_changes.py  test_lmtd_iter.py  test_property_based.py  units.py  updater.py  version.py  version_info.txt
.github/workflows/: ci.yml  release.yml
locale/tr/LC_MESSAGES/: messages.po
