[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heat-exchanger-calc"
version = "0.2.0"
description = "Fin-tube heat exchanger thermodynamic & geometric analysis tool"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Heat Exchanger Calc Team"}]
readme = "README.md"

dependencies = [
    "certifi>=2024",
    "CoolProp>=6.8",
    "fluids>=1.3",
    "ht>=1.2",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.4",
    "pint>=0.22",
    "pychemengg>=0.1a11",
    "scipy>=1.9",
    "thermo>=0.6",
    "reportlab>=4",
    "iapws>=1.5",
]

[project.optional-dependencies]
desktop = ["PyQt5>=5.15", "PyInstaller>=6.12"]
web = ["streamlit>=1.56"]
dev = [
    "pytest>=7",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.8",
    "mypy>=1.0",
    "pre-commit>=3",
]

[project.scripts]
heat-exchanger-desktop = "run_desktop:main"
heat-exchanger-web = "run_web:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", ".github*"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["*.sh", "*.ps1", "*.spec"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E402", # module-level import ordering (intentional: logger/config init)
]

[tool.ruff.lint.isort]
known-first-party = ["heat_exchanger_calc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--cov", "--cov-report=term-missing", "--cov-report=html"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["heat_exchanger", "fluids_db", "reporting", "config", "exceptions", "units", "model_types", "plot_theme", "correlations", "helpers"]
branch = true
relative_files = true
omit = ["test_*"]

[tool.coverage.html]
directory = "htmlcov"
